--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,29 @@
 services:
-  crm:
-    image: alpine:latest
-    container_name: crm
-    hostname: crm-removespread
-    restart: unless-stopped
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      hostname: app
+      restart: unless-stopped
+      environment:
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+        - POSTGRES_DB=crm
+        - TZ=Europe/Moscow
+      depends_on:
+        - db
+    ports:
+      - 8080:8080
+  db:
+    image: postgres:14-alpine
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=crm
-      - TZ=Europe/Moscow
     ports:
       - 5432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data: {}
