--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      hostname: app
-      restart: unless-stopped
-      environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-        - POSTGRES_DB=crm
-        - TZ=Europe/Moscow
-      depends_on:
-        - db
+    hostname: app
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=crm
+      - TZ=Europe/Moscow
+      - DB_PORT=5432
+      - DB_HOST=db
+    depends_on:
+      - db
     ports:
       - 8080:8080
   db:
