--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,12 @@ services:
       - 8080:8080
   db:
     image: postgres:14-alpine
+    container_name: db
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=crm
+      - TZ=Europe/Moscow
     ports:
       - 5432:5432
     volumes:
